--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.17",
-    "@reduxjs/toolkit": "^1.9.7",
+    "@reduxjs/toolkit": "2.0.1",
     "@tanstack/react-query": "^5.8.1",
     "@tanstack/react-query-devtools": "^5.8.1",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/jest-dom": "6.1.6",
+    "@testing-library/react": "14.1.2",
+    "@testing-library/user-event": "14.5.2",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "dotenv": "^16.3.1",
@@ -23,12 +23,12 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-loading-skeleton": "^3.3.1",
-    "react-redux": "^8.1.3",
+    "react-redux": "9.0.4",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "sass": "^1.69.5",
     "swiper": "^11.0.4",
-    "web-vitals": "^2.1.4",
+    "web-vitals": "3.5.1",
     "yup": "^1.3.2"
   },
   "scripts": {
